Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: unready_all
TODO: myhttpd header parsing
TODO: channel->maxsize(newsize)?
TODO: http://www.microsoft.com/msj/archive/s2ce.aspx

	- document that perl 5.12 deliberately removed support for cloning.

5.22  Wed Apr 14 03:55:35 CEST 2010
	- correctly return udnef on errors in Coro::Handle::read/write
          (testcase by Marc Mims).
	- convert Coro::Util into a "perl compatibility wrapper" - the functions
          are less useful now, but are drop-in replacements for existing
          functions, listing better alternatives in the documentation. This also
          fixes a bug in Coro::LWP which naively substituted Socket::inet_aton
          with Coro::Util::inet_aton.
        - do not override $Coro::idle unconditionally in Coro.pm, as other
          modules could have provided their own idle coro already
          (for exmaple, Coro::AnyEvent).
	- fix Coro::Util::gethost* functions.
        - Coro::Timer corretcly exports it's symbols (reported by Hideki Yamamura).

5.21  Wed Dec 16 07:19:51 CET 2009
        - automatically load Coro::AnyEvent when AnyEvent and Coro are used
          together.
        - add some examples on how to combine other event loops with Coro in
          Coro::AnyEvent, and how to run it (and not to block). Seems to be
          the most common source of confusion.
        - try to catch people naively blocking in an event callback.
        - work around the perl filehandle bug issue in conjunction with
          older common::sense (as indirectly pointed out by ZSystem).
	- clarify the "not from signal handlers" section.

5.2   Sun Oct  4 14:54:24 CEST 2009
        - Coro::Storable destroyed the prototypes of the functions it wrapped.
        - export rouse_cb and rouse_wait by default now.
        - fix various prototype mismatches in Coro::AnyEvent and Coro::Handle.
        - new method $state->swap_sv.