@@ -6,6 +6,9 @@ TODO: myhttpd header parsing
 TODO: channel->maxsize(newsize)?
 TODO: http://www.microsoft.com/msj/archive/s2ce.aspx
 
+	- be more resistant to ordering changes when initialising
+          Coro::AnyEvent, Coro::EV and Coro::Event (reported by Matthias
+          Waldorf).
 	- document that perl 5.12 deliberately removed support for cloning.
 
 5.22  Wed Apr 14 03:55:35 CEST 2010
